[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lava"
version = "0.0.1"
description = "This project uses variational autoencoders (VAEs) to predict assessment responses and explores the applicability of the VAE latent space to estimate participant abilities."
authors = [
  { name = "Adam Richie-Halford" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lava"]
force_sort_within_sections = true
